# flexible_d_s

./: Cargo.toml  README.md
src/: lib.rs
src/algo/: complete_conflict.rs  dempster_classic.rs  fast_algo.rs  mod.rs
src/com/: dempster.rs  dempster_impl.rs  dempster_sub_focal_to_mul.rs  input.rs
src/core/: evidence.rs  mod.rs
src/test/: complete_conflict_test.rs  dempster_classic_test.rs  dempster_test.rs  evidence_matrix_test.rs  evidence_test.rs  fast_algo_test.rs  input_test.rs  integrate_dempster.rs  integrate_test.rs  mod.rs
src/utils/: macros.rs  matrix_calc.rs  mod.rs  tools.rs  verify.rs
