[package]
name = "flexible_d_s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
permutator = "0.4.0"
pyo3 = { version = "0.15.1", features = ["extension-module"] }

[lib]
name="evidence_conflict_merge"
crate-type=["cdylib"]